--- a/jscomp/bsb/bsb.adoc
+++ b/jscomp/bsb/bsb.adoc
@@ -8,3 +8,13 @@ All  output (not just js in case we support native build)
 It's hard to bake it in built rules, since it is flag dependent, if you have `-bin-annot` 
 then you would like to install `cmt` too, however, it might be or not be there 
  
+# post-build
+
+Here we have `js` generated, we can do either post-build or
+create a new rule.
+
+Note creating new rules will get more concurrency while post-build is easy 
+and can do in source modification
+
+https://groups.google.com/forum/#!searchin/ninja-build/post$20process%7Csort:relevance/ninja-build/Q4hpcDmhPzw/KZpDyOEFuTkJ 
+
