--- a/site/docsource/Build-system-support.adoc
+++ b/site/docsource/Build-system-support.adoc
@@ -26,7 +26,27 @@ we are using Google's https://github.com/ninja-build/ninja/releases[ninja-build]
 ======
 
 `bsb` can be running in any subdirectory, it is a schema based build tool, the schema is 
-http://bloomberg.github.io/bucklescript/docson/#build-schema.json[available]
+http://bloomberg.github.io/bucklescript/docson/#build-schema.json[available], it is strongly recommended to **check out the http://bloomberg.github.io/bucklescript/docson/#build-schema.json[schema]**
+after you finish reading the tutorials below.
+
+If your editors support JSON schema validation and auto-completion like https://code.visualstudio.com/docs/languages/json[VSCode], 
+below is a configuration to help you get auto-completion and validation for free:
+
+.settings.json
+[source,js] 
+------------
+{
+    "json.schemas": [
+        {
+            "fileMatch": [
+                "bsconfig.json"
+            ],
+            "url" : "file:///path/to/bucklescript/docs/docson/build-schema.json" // <1>
+        }
+    ],
+    // ....
+}    
+------------
 
 The build system is installed as `bsb.exe` in `bs-platform/bin/bsb.exe`, due to a known issue in npm, 
 we create a JS wrapper (which is accessible in `.bin` too), so the user can call 
@@ -40,15 +60,14 @@ Here is a *minimal* configuration:
 -----------  
 { 
   "name": "test", // package name, required <1>  
-  "sources": 
-     { "dir": "src"} // <2>
+  "sources": "src" // <2>
 }
 -----------
 <1> It is an extension to JSON with comment support
 <2> Here we did not list files, so all `.ml`, `.mli`, `.re`, `.rei` will be considered as source files
 
 
-The entry point is `bsb.exe`,
+The entry point is `bsb`,
 it will check if there is already `build.ninja` in the build directory, 
 if not or need regenerated it will generate a file  `build.ninja` 
 and delegate the hard work to `ninja`.
@@ -84,9 +103,11 @@ We wrap `bsb.exe` as `bsb` so that it will work across different platform.
 .Watch mode
 [source,sh]
 --------------------
-bsb -w 
+bsb // <1>
+bsb -w // <2>
 --------------------
-
+<1> Do the plain build 
+<2> Do the plain build and watch
 
 
 
@@ -129,10 +150,18 @@ After your `npm install`,
 ----------
 bsb -clean-world // <1>
 bsb -make-world // <2>
+bsb -w // <3>
 ----------
 <1> Clean the binary artifact of current build and your dependency
 <2> Build dependencies and lib itself
+<3> Start watching the project, whenever your changes are made, `bsb` will rebuild incrementally
 
+You can also stream-line the three commands as below:
+
+[source,sh]
+-----------
+bsb -clean-world -make-world -w
+-----------
 
 ==== Mark your directory as dev only
 
@@ -153,12 +182,113 @@ to build  in that case you can mark it as dev only
 <1> directory `test` is in dev mode, it will not be built when used as a dependency
 
 
+=== A real world example of using `bsb`
+
+Below is a json configuration for the https://github.com/OvermindDL1/bucklescript-tea[bucklescript-tea]: the Elm artchitecture in BuckleScript
+
+.bsconfig.json
+[source,js]
+-----------
+{
+  "name": "bucklescript-tea",
+  "version": "0.1.3",  
+  "sources": [
+   "src",   // <1>
+    {
+      "dir": "test",
+      "type": "dev" // <2>
+    }
+  ]
+}
+-----------
+<1> Source directory, by default it will export all units of this directory to users
+<2> Dev directory, which will only be useful for developers of this project 
+
+.package.json
+[source,js]
+-----------
+{
+  "name": "bucklescript-tea",
+  "version": "0.1.3",
+  "description": "TEA for Bucklescript",
+  "scripts": {
+    "build": "bsb",
+    "watch": "bsb -w",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "bs-platform": "^1.4.2" // <1>
+  }
+}
+-----------
+<1> Here we list `bs-platform` as a peer dependency so that different repos shares the same compiler
+
+Now, we have a repo https://github.com/bobzhang/bucklescript-have-tea[bucklescript-have-tea] to depend on `bucklescript-tea`, its configurations are as below:
+
+.bsconfig.json
+[source,js]
+-----------
+{
+    "name" : "bucklescript-have-tea",
+    "sources" :  "src",
+    "bs-dependencies": [
+      "bucklescript-tea"  
+    ]
+}
+-----------
+
+
+.package.json
+[source,js]
+-----------
+{
+    "name" : "bucklescript-have-tea", 
+    "version" : "0.1.0",
+    "dependencies" : { "bucklescript-tea" : "^0.1.2" }, // <1>
+    "peerDependencies" : { "bs-platform" : "^1.4.2" } //<2>
+}
+-----------
+<1> List `bucklescript-tea` as dependency
+<2> List `bs-platform` as peer dependency
+
+Suppose you are in `bucklescript-have-tea` top directory, 
+
+[source,sh]
+----------
+npm install // <1>
+npm install bs-platform <2>
+./node_modules/.bin/bsb -clean-world -make-world -w <3>
+----------
+<1> Install the dependencies
+<2> Install peer dependencies
+<3> Run the build 
+
+You can also change the `package-specs` to have another module format, for example, tweak your `bsconfig.json`:
+[source,js]
+----------
+{
+  ... , 
+  "package-specs" : ["amdjs", "commonjs"],
+  ...      
+}
+----------
+
+Rerun the command 
+
+[source,sh]
+----------
+bsb -clean-world -make-world 
+----------
+
+You will get both `commonjs` and `amdjs` support, in the end, we suggest you http://bloomberg.github.io/bucklescript/docson/#build-schema.json[check out the schema] and enjoy the build!
+
+
 
 === Build using Make
 [WARNING]
 ========
 `bsb` is officialy recommended build system, this section is listed here only for people who 
-are curious about how the build works
+are _curious_ about how the build works
 ========
 
 BuckleScript distribution has `bsdep.exe` which has the same interface as `ocamldep`
